Revision history for App-Doh

          - Started to add create screen
          - Switched from jQuery to Mootools. Autosize textarea works
          - Made README.md a copy of Getting Started
          - Updated dependencies
          - Added app editor image to Getting_Started
          - Markdown editor autosizes textarea
          - Only code block to go on static pages
          - Updated git hooks
          - Static generator creating pages
          - Adding static generator
          - Going multilingual
          - Added markdown editor
          - Added green.css to repository
          - Added MANIFEST to repository
          - Added more installation instuctions
          - Renamed Build.PL template
          - Removed width: 100% from CSS
          - Split out navbar.tt
          - Removed Ident and extra VERSION lines
          - Going to re use less on the CSS
          - Help model doesn't hard code the url
          - Switched to Dist::Zilla
          - Fixed Pod css for index
          - Going to rewrite float view
          - Own CSS starting to work
          - Started remove Bootstrap and lessc
          - Help model complete
          - Microformats register their extensions
          - Supports POD as second microformat
          - Daemon can start multiple instances
          - Added Daemon
          - Favicon, cfg files and Plack sorted
          - Rename to Doh complete
          - Navigation slider works
          - Removing original name
          - Serves static files
          - Serves pages via plack
          - Added project files to master branch
