@@ -1,7 +1,4 @@
-**Doh** is a documentation generator that uses a simple folder
-  structure and Markdown files to create custom documentation on the
-  fly. It helps you create great looking documentation in a developer
-  friendly way.
+**Doh** is a documentation generator that uses a simple folder structure and Markdown files to create custom documentation on the fly. It helps you create great looking documentation in a developer friendly way.
 
 ## Features
 
