@@ -32,6 +32,7 @@ Module::Build     = 0.4004
 [Prereqs / BuildRequires]
 version           = 0.88
 Module::Build     = 0.4004
+Test::Warnings    = 0.014
 
 [Meta::Dynamic::Config]
 
