@@ -1,5 +1,6 @@
 Revision history for App-Doh
 
+          - Added Test::Warnings as a dependenct to fix P:M:LogErrors
           - Started to add create screen
           - Switched from jQuery to Mootools. Autosize textarea works
           - Made README.md a copy of Getting Started
